<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_of_tasks">Tasks</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="edit_text_title_hint">Title</string>
    <string name="edit_text_date_hint">Date</string>
    <string name="edit_text_time_hint">Time</string>
    <string name="text_view_priority">Priority:</string>
    <string name="radio_high">High</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_low">Low</string>
    <string name="button_save">Save</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="display_task_title">Task Information</string>
    <string name="display_task_name">Name:</string>
    <string name="display_task_date">Date:</string>
    <string name="display_task_time">Time:</string>
    <string name="display_task_priority">Priority:</string>

    <item name="task_list_position" type="id"/>

    <string name="title_activity_edit_task">EditTaskActivity</string>

</resources>
